@@ -19,13 +19,19 @@ import static com.expediagroup.streamplatform.streamregistry.state.internal.Even
 import static com.expediagroup.streamplatform.streamregistry.state.model.event.Event.LOAD_COMPLETE;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.concurrent.Executors.newScheduledThreadPool;
+import static java.util.concurrent.TimeUnit.SECONDS;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.when;
 
 import java.time.Duration;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ScheduledExecutorService;
+
+import lombok.val;
 
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
@@ -69,7 +75,7 @@ public class KafkaEventReceiverTest {
 
   private final String topic = "topic";
   private final TopicPartition topicPartition = new TopicPartition(topic, 0);
-  private final List<TopicPartition> topicPartitions = List.of(topicPartition);
+  private final List<TopicPartition> topicPartitions = Collections.singletonList(topicPartition);
 
   @Before
   public void before() {
@@ -79,20 +85,25 @@ public class KafkaEventReceiverTest {
   @Test
   public void typical() throws Exception {
     when(config.getTopic()).thenReturn(topic);
-    when(consumer.partitionsFor(topic)).thenReturn(List.of(partitionInfo));
-    when(consumer.beginningOffsets(topicPartitions)).thenReturn(Map.of(topicPartition, 0L));
-    when(consumer.endOffsets(topicPartitions)).thenReturn(Map.of(topicPartition, 0L));
-    when(consumer.poll(Duration.ofMillis(100))).thenReturn(new ConsumerRecords<>(Map.of(topicPartition, List.of(record))));
+    when(consumer.partitionsFor(topic)).thenReturn(Collections.singletonList(partitionInfo));
+    when(consumer.beginningOffsets(topicPartitions)).thenReturn(Collections.singletonMap(topicPartition, 0L));
+    when(consumer.endOffsets(topicPartitions)).thenReturn(Collections.singletonMap(topicPartition, 0L));
+    when(consumer.poll(Duration.ofMillis(100))).thenReturn(new ConsumerRecords<>(Collections.singletonMap(topicPartition, Collections.singletonList(record))));
     when(record.key()).thenReturn(avroKey);
     when(record.value()).thenReturn(avroValue);
     when(converter.toModel(avroKey, avroValue)).thenReturn(event);
-    when(record.headers()).thenReturn(new RecordHeaders(List.of(new RecordHeader(CORRELATION_ID, "foo".getBytes(UTF_8)))));
+    when(record.headers()).thenReturn(new RecordHeaders(Collections.singletonList(new RecordHeader(CORRELATION_ID, "foo".getBytes(UTF_8)))));
+    val latch = new CountDownLatch(1);
+    doAnswer((correlationId) ->{
+      latch.countDown();
+      return null;
+    }).when(correlator).received(anyString());
 
     underTest.receive(listener);
-    Thread.sleep(100L);
+    latch.await(1, SECONDS);
     underTest.close();
 
-    var inOrder = Mockito.inOrder(consumer, listener, correlator);
+    val inOrder = Mockito.inOrder(consumer, listener, correlator);
     inOrder.verify(consumer).assign(topicPartitions);
     inOrder.verify(consumer).seekToBeginning(topicPartitions);
     inOrder.verify(listener).onEvent(LOAD_COMPLETE);
@@ -103,21 +114,26 @@ public class KafkaEventReceiverTest {
   @Test
   public void listenerThrowsException() throws Exception {
     when(config.getTopic()).thenReturn(topic);
-    when(consumer.partitionsFor(topic)).thenReturn(List.of(partitionInfo));
-    when(consumer.beginningOffsets(topicPartitions)).thenReturn(Map.of(topicPartition, 0L));
-    when(consumer.endOffsets(topicPartitions)).thenReturn(Map.of(topicPartition, 0L));
-    when(consumer.poll(Duration.ofMillis(100))).thenReturn(new ConsumerRecords<>(Map.of(topicPartition, List.of(record))));
+    when(consumer.partitionsFor(topic)).thenReturn(Collections.singletonList(partitionInfo));
+    when(consumer.beginningOffsets(topicPartitions)).thenReturn(Collections.singletonMap(topicPartition, 0L));
+    when(consumer.endOffsets(topicPartitions)).thenReturn(Collections.singletonMap(topicPartition, 0L));
+    when(consumer.poll(Duration.ofMillis(100))).thenReturn(new ConsumerRecords<>(Collections.singletonMap(topicPartition, Collections.singletonList(record))));
     when(record.key()).thenReturn(avroKey);
     when(record.value()).thenReturn(avroValue);
     when(converter.toModel(avroKey, avroValue)).thenReturn(event);
-    when(record.headers()).thenReturn(new RecordHeaders(List.of(new RecordHeader(CORRELATION_ID, "foo".getBytes(UTF_8)))));
+    when(record.headers()).thenReturn(new RecordHeaders(Collections.singletonList(new RecordHeader(CORRELATION_ID, "foo".getBytes(UTF_8)))));
     doThrow(new RuntimeException("listener error")).when(listener).onEvent(event);
+    val latch = new CountDownLatch(1);
+    doAnswer((correlationId) ->{
+      latch.countDown();
+      return null;
+    }).when(correlator).received(anyString());
 
     underTest.receive(listener);
-    Thread.sleep(100L);
+    latch.await(1, SECONDS);
     underTest.close();
 
-    var inOrder = Mockito.inOrder(consumer, listener, correlator);
+    val inOrder = Mockito.inOrder(consumer, listener, correlator);
     inOrder.verify(consumer).assign(topicPartitions);
     inOrder.verify(consumer).seekToBeginning(topicPartitions);
     inOrder.verify(listener).onEvent(LOAD_COMPLETE);
@@ -127,7 +143,7 @@ public class KafkaEventReceiverTest {
 
   @Test(expected = IllegalStateException.class)
   public void incorrectNumberOfPartitions() {
-    when(consumer.partitionsFor(topic)).thenReturn(List.of());
+    when(consumer.partitionsFor(topic)).thenReturn(Collections.emptyList());
 
     underTest.consume(listener);
   }
